# code/backend/net.mstoegerer.TaskNest/net.mstoegerer.TaskNest.Api/Presentation/Controllers/UserController.cs
@@ -23,7 +23,7 @@ public class UserController(UserService userService) : ApiBaseController
         return Created();
     }
 
-    [HttpGet("{email}:string")]
+    [HttpGet("{email}")]
     public async Task<ActionResult<Guid>> GetUserByEmail(string email)
     {
         var userId = await userService.GetUserByEmailAsync(email);
